<resources>
    <string name="app_name">Даты</string>
    <string name="app_version">Версия %s</string>
    <string name="app_logo">Логотип приложения</string>
    <string name="title_practise">Практика</string>
    <string name="title_dates">Даты</string>
    <string name="title_menu">Меню</string>
    <string name="title_statistics">Статистика</string>
    <string name="title_details_picker">Выбор настроек</string>
    <string name="title_practise_settings">Настройки практики</string>
    <string name="title_analyze">Анализ</string>
    <string name="title_game">Игра</string>
    <string name="title_notifications">Уведомления</string>
    <string name="title_activity_settings">Настройки</string>
    <string name="hello_blank_fragment">Привет от пустого фрагмента =)</string>
    <string name="arrow_back">Назад</string>
    <string name="settings">Настройки</string>
    <string name="analyze">Анализ</string>
    <string name="next">Далее</string>
    <string name="search">Поиск</string>
    <string name="clear">Очистка</string>
    <string name="save">Сохранить</string>
    <string name="result_image">Результат</string>
    <string name="fragment_introduction_skip">Пропустить</string>
    <string name="fragment_introduction_next">Далее</string>
    <string name="fragment_introduction_ready">Готово</string>
    <string name="fragment_introduction_image">Преимущество</string>
    <string name="dates_all">Все</string>
    <string name="dates_management">Правления</string>
    <string name="dates_war">Войны</string>
    <string name="dates_reforms">Реформы</string>
    <string name="dates_revolt">Восстания</string>
    <string name="dates_search">Поиск по датам</string>
    <string name="fragment_terms_search">Поиск по терминам</string>
    <string name="practise_dates_title">Даты</string>
    <string name="practise_terms_title">Термины</string>
    <string name="fragment_dates_practise_cards_title">Карточки</string>
    <string name="fragment_dates_practise_variant_title">Выбора варианта</string>
    <string name="fragment_dates_practise_distribution_title">Распределение</string>
    <string name="fragment_dates_practise_cards_image">Карточки</string>
    <string name="fragment_dates_practise_cards_description">Запоминание дат через карточки</string>
    <string name="fragment_dates_practise_voice_image">Голосовые карточки</string>
    <string name="fragment_dates_practise_voice_title">Голосовые карточки</string>
    <string name="fragment_dates_practise_voice_description">Запоминание дат через карточки с голосовой проверкой</string>
    <string name="fragment_dates_practise_test_image">Тест</string>
    <string name="fragment_dates_practise_test_title">Тест</string>
    <string name="fragment_dates_practise_test_description">Классический тест с одним правильным ответом</string>
    <string name="fragment_dates_practise_true_false_image">Правда или ложь</string>
    <string name="fragment_dates_practise_true_false_title">Правда или ложь</string>
    <string name="fragment_dates_practise_true_false_description">Проверка на правильность соотношения даты и события</string>
    <string name="fragment_dates_practise_link_image">Связка</string>
    <string name="fragment_dates_practise_link_title">Связка</string>
    <string name="fragment_dates_practise_link_description">Связка даты с событием</string>
    <string name="fragment_dates_practise_sort_image">Сортировка</string>
    <string name="fragment_dates_practise_sort_title">Сортировка</string>
    <string name="fragment_dates_practise_sort_description">Расположение событий в хронологической последовательности</string>
    <string name="fragment_dates_practise_distribution_image">Распределение</string>
    <string name="fragment_dates_practise_distribution_description">Распределение дат между двумя выборами</string>
    <string name="fragment_terms_practise_cards_title">Карточки</string>
    <string name="fragment_terms_practise_variant_title">Выбора варианта</string>
    <string name="fragment_terms_practise_distribution_title">Распределение</string>
    <string name="fragment_terms_practise_cards_image">Карточки</string>
    <string name="fragment_terms_practise_cards_description">Запоминание терминов через карточки</string>
    <string name="fragment_terms_practise_voice_image">Голосовые карточки</string>
    <string name="fragment_terms_practise_voice_title">Голосовые карточки</string>
    <string name="fragment_terms_practise_voice_description">Запоминание дат через карточки с голосовой проверкой</string>
    <string name="fragment_terms_practise_test_image">Тест</string>
    <string name="fragment_terms_practise_test_title">Тест</string>
    <string name="fragment_terms_practise_test_description">Классический тест с одним правильным ответом</string>
    <string name="fragment_terms_practise_true_false_image">Правда или ложь</string>
    <string name="fragment_terms_practise_true_false_title">Правда или ложь</string>
    <string name="fragment_terms_practise_true_false_description">Проверка на правильность соотношения термина и описания</string>
    <string name="fragment_terms_practise_link_image">Связка</string>
    <string name="fragment_terms_practise_link_title">Связка</string>
    <string name="fragment_terms_practise_link_description">Связка даты с событием</string>
    <string name="fragment_terms_practise_sort_image">Сортировка</string>
    <string name="fragment_terms_practise_sort_title">Сортировка</string>
    <string name="fragment_terms_practise_sort_description">Расположение событий в хронологической последовательности</string>
    <string name="fragment_terms_practise_distribution_image">Связка</string>
    <string name="fragment_terms_practise_distribution_description">Связка даты с событием</string>
    <string name="fragment_statistics_app">Статистика по приложению</string>
    <string name="fragment_statistics_dummy_value">1.231K</string>
    <string name="fragment_statistics_dummy_change">+12.3% of target</string>
    <string name="fragment_statistics_dummy_image">Статистика</string>
    <string name="easy_mode">Необходимый минимум</string>
    <string name="full_mode">Расширенный режим</string>
    <string name="twitter_label">Twitter</string>
    <string name="telegram_label">Telegram</string>
    <string name="vk_label">VK</string>
    <string name="instagram_label">Instagram</string>
    <string name="mail_label">Электронная почта</string>
    <string name="onanov_ru">onanov.ru</string>
    <string name="game_label">Игра</string>
    <string name="loading_data">Данные загружаются…</string>
    <string name="dates_details_year">%s год(а)</string>
    <string name="set_details_test_mode">Режим тестирования</string>
    <string name="set_details_single_title">Тип</string>
    <string name="set_dates_count">0 дат(ы)</string>
    <string name="set_details_test_mode_title">Режим</string>
    <string name="date_count">%d дат(ы)</string>
    <string name="set_details_multi_title">Столетия</string>
    <string name="set_dates_test_button">Начать</string>
    <string name="fragment_practise_settings_random_title">Генерация случайных чисел</string>
    <string name="fragment_practise_settings_test_mode">Режим теста</string>
    <string name="fragment_practise_settings_type">Тип</string>
    <string name="fragment_practise_settings_century">Столетия</string>
    <string name="fragment_practise_settings_report">Ошибка в практике</string>
    <string name="reset_button">Еще раз!</string>
    <string name="exit_button">Выход</string>
    <string name="current_result">Ваш текущий результат: </string>
    <string name="best_result">Ваш лучший результат за эту сессию: </string>
    <string name="cur_mark">Ваша текущая оценка: </string>
    <string name="mark_very_bad">Очень Плохо</string>
    <string name="mark_bad">Плохо</string>
    <string name="mark_neutral">Удовлетворительно</string>
    <string name="mark_good">Хорошо</string>
    <string name="mark_very_good">Отлично</string>
    <string name="mistakes">Ошибки</string>
    <string name="fragment_analyze_result">Ваш результат</string>
    <string name="fragment_analyze_wrong_dummy_value">8</string>
    <string name="fragment_analyze_right_dummy_value">12</string>
    <string name="fragment_cards_next">></string>
    <string name="fragment_cards_description">\?</string>
    <string name="check_button">Проверить</string>
    <string name="fragment_voice_recognition_image">Голосовое распознавание</string>
    <string name="true_button">Правда</string>
    <string name="false_button">Ложь</string>
    <string name="true_false_question_date">Дата</string>
    <string name="true_false_question_event">Событие</string>
    <string name="sort_text">Расположите в хронологической последовательности</string>
    <string name="gdpr_title">Персонализируйте Вашу рекламу</string>
    <string name="gdpr_agree">Да, я согласен</string>
    <string name="gdpr_disagree">Нет, спасибо</string>
    <string name="gdpr_understand">Я понимаю, что буду видеть рекламу, но она может не совпадать с моими интересами.</string>
    <string name="gdpr_learn_more">Узнать больше.</string>
    <string name="gdpr_main_text">Даты персонализируют Вашу рекламу, используя Appodeal. Appodeal и его партнеры могут собирать и обрабатывать Ваши такие персональные данные, как идентификатор устройства, демографические данные и другую информацию, которая позволит предоставить Вам рекламу, связанную с Вашими интересами. Соглашаясь с этими условиями, Вы увидите рекламу, которую Appodeal и его партнеры считают более подходящей для Вас. Узнать больше.\n\nСоглашаясь, Вы подтверждаете, что вам уже исполнилось 16 и Вы хотите персональную рекламу.</string>
    <string name="gdpr_agree_text">Отлично. Мы надеемся, что Вы получите удовольствие от вашей персональной рекламы. Если вы когда-либо передумаете, для этого достаточно переустановить приложение.</string>
    <string name="gdpr_disagree_text">Appodeal не будет собирать вашу информацию для персональной рекламы в этом приложении. Однако, если вы позволите Appodeal собирать информацию в другом приложении, мы будем собирать вашу информацию в том приложении.</string>
    <string name="gdpr_close">Закрыть окно</string>
    <string name="fragment_game_development">В разработке :)</string>
    <string name="fragment_game_update">Проверить обновление</string>
    <string name="fragment_game_development_icon">Разработка</string>
    <string name="details_title">Подробности</string>
    <string name="details_dates_version">Описание приложения</string>
    <string name="details_wiki_version">Описание Wikipedia</string>
    <string name="details_wiki_link">Ссылка на Wikipedia</string>
    <string name="details_google_search_link">Поиск в Google</string>
    <string name="details_yandex_search_link">Поиск в Яндекс</string>
    <string name="terms_title">Термины</string>
    <string name="practise_tab_dates">Даты</string>
    <string name="practise_tab_term">Термины</string>
    <string name="fragment_dates_view_title">Настройка дат</string>
    <string name="fragment_dates_view_example">Пример отображения</string>
    <string name="fragment_dates_view_type">Режимы отображения</string>
    <string name="fragment_dates_view_default">Стандартное отображение</string>
    <string name="fragment_dates_view_adaptive">Адаптированное отображение</string>
    <string name="fragment_dates_view_reset_title">Сброс</string>
    <string name="fragment_dates_view_reset">Сбросить настройки дат</string>
    <string name="about_title">О приложении</string>
    <string name="about_rate_app">Оценить приложение</string>
    <string name="about_privacy_policy">Политика конфиденциальности</string>
    <string name="about_licence">Лицензии</string>
    <string name="about_faq">FAQ</string>
    <string name="about_beta_test">Бета-тестирование</string>
    <string name="dialog_result_title">Результаты тестирования</string>
    <string name="dialog_result_mark">Ваша оценка</string>
</resources>