<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/aboutToolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        android:background="@color/colorPrimary"
        app:navigationIcon="@drawable/ic_arrow_back_white"
        app:theme="@style/ToolBarStyle"
        app:title="@string/about_title"
        app:titleTextColor="@android:color/white" />

    <ImageView
        android:id="@+id/about_app_logo"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:src="@drawable/ic_app_logo"
        android:contentDescription="@string/app_logo" />

    <TextView
        android:id="@+id/about_app_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:text="@string/app_version" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:background="@color/colorBackground" />

    <TextView
        android:id="@+id/aboutRateApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/about_rate_app"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/aboutPrivacyPolicy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/about_privacy_policy"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/aboutLicence"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/about_licence"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/aboutFAQ"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/about_faq"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/aboutBetaTest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/about_beta_test"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@android:color/black" />

</LinearLayout>