<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        android:background="@color/colorPrimary"
        app:navigationIcon="@drawable/ic_arrow_back_white"
        app:theme="@style/ToolBarStyle"
        app:title="@string/fragment_dates_view_title"
        app:titleTextColor="@android:color/white" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:paddingStart="16dp"
                android:paddingTop="16dp"
                android:paddingEnd="16dip"
                android:paddingBottom="4dp"
                android:text="@string/fragment_dates_view_example"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/colorSettingsCategory"
                android:textSize="14sp" />

            <FrameLayout
                android:id="@+id/viewContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:animateLayoutChanges="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:paddingStart="16dp"
                android:paddingTop="16dp"
                android:paddingEnd="16dip"
                android:paddingBottom="4dp"
                android:text="@string/fragment_dates_view_type"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/colorSettingsCategory"
                android:textSize="14sp" />

            <CheckedTextView
                android:id="@+id/viewDefault"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:checkMark="?android:attr/listChoiceIndicatorSingle"
                android:ellipsize="marquee"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/fragment_dates_view_default"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black" />

            <CheckedTextView
                android:id="@+id/viewAdaptive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@android:color/white"
                android:checkMark="?android:attr/listChoiceIndicatorSingle"
                android:ellipsize="marquee"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/fragment_dates_view_adaptive"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:paddingStart="16dp"
                android:paddingTop="16dp"
                android:paddingEnd="16dip"
                android:paddingBottom="4dp"
                android:text="@string/fragment_dates_view_reset_title"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/colorSettingsCategory"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/reset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:ellipsize="marquee"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/fragment_dates_view_reset"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>