<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="4dp"
    app:cardElevation="0dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/statistics_card_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:text="@string/fragment_statistics_app" />

        <TextView
            android:id="@+id/statistics_card_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/statistics_card_title"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-thin"
            android:text="@string/fragment_statistics_dummy_value"
            android:textColor="@android:color/black"
            android:textSize="34sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/statistics_card_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/statistics_card_value"
            android:layout_marginStart="12dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            android:text="@string/fragment_statistics_dummy_change" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>